force-app/main/default/objects/LLC_BI__Pricing_Covenant__c/LLC_BI__Pricing_Covenant__c.object-meta.xml
<CustomObject>
    <description>Join object between Pricing Rate Component and Covenants</description>
    <label>Pricing Covenant</label>
    <nameField>
        <label>Pricing Covenant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>