force-app/main/default/objects/LLC_BI__Pricing_Covenant__c/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <description>This field is automatically populated via formula. It identifies whether or not a Pricing Covenant record is active. Checked = True, Unchecked = False.</description>
    <formula>LLC_BI__Covenant2__r.LLC_BI__Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>