force-app/main/default/objects/LLC_BI__Pricing_Covenant__c/fields/LLC_BI__Covenant2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant2__c</fullName>
    <description>This field is required. It is automatically populated. It identifies the Covenant Mgmt record associated to the Pricing Covenant record.</description>
    <label>Covenant Mgmt</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipLabel>Pricing Covenants</relationshipLabel>
    <relationshipName>Pricing_Covenants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>